Rename mapml-viewer to mapml.js for consistency with project name

--- a/docs/api/geojson-api.mdx
+++ b/docs/api/geojson-api.mdx
@@ -14,7 +14,7 @@ The **GeoJSON API** is provided as a library to convert GeoJSON to and from MapM
 <!doctype html>
 <html lang="en">
     <head>
-        <script type="module" src="mapml-viewer.js"></script>
+        <script type="module" src="mapml.js"></script>
         <script src="lib/geojson.js"></script>
     </head>
     <body>
