--- a/docs/api/mapml-viewer-api.mdx
+++ b/docs/api/mapml-viewer-api.mdx
@@ -617,7 +617,7 @@ let output = map.geojson2mapml(json);
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Example Custom Projection</title>
-  <script type="module" src="web-map/mapml-viewer.js"></script>
+  <script type="module" src="web-map/mapml.js"></script>
   <script type="module">
     let customProjectionDefinition = `{
       "projection": "ATLAS_POLAR_MAP",
