--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
@@ -14,7 +14,7 @@ L’**interface de programmation d’applications (API) GeoJSON** est fournie so
 <!doctype html>
 <html lang="en">
     <head>
-        <script type="module" src="mapml-viewer.js"></script>
+        <script type="module" src="mapml.js"></script>
         <script src="lib/geojson.js"></script>
     </head>
     <body>
