--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
@@ -29,9 +29,9 @@ L’**interface de programmation d’applications (API) GeoJSON** est fournie so
 
 | Fonction | Retours| Description |
 |----------|---------|-------------|
-|<code>geojson2mapml(<Object&nbsp;\|&nbsp;String\>&nbsp;json,&nbsp;<Object\>&nbsp;options)</code> | Élément  MapML `<layer->`. | Convertit une caractéristique GeoJSON ou une chaîne ou un objet de collection de caractéristiques en élément MapML `<layer->` contenant un ou plusieurs éléments `<map-feature>`.|
+|<code>geojson2mapml(\<Object \| String\> json, \<Object\> options)</code> | Élément  MapML `<layer->`. | Convertit une caractéristique GeoJSON ou une chaîne ou un objet de collection de caractéristiques en élément MapML `<layer->` contenant un ou plusieurs éléments `<map-feature>`.|
 
-:::Conseil
+:::tip
 
 Jetez un coup d’œil à [cette application](https://maps4html.org/experiments/api/custom-map-ui/geoname-search-ui.html) au moyen de l’API geojson2mapml!
 
@@ -41,20 +41,20 @@ Jetez un coup d’œil à [cette application](https://maps4html.org/experiments/
 
 | Paramètre | Description |
 |------|---------------------|
-| <String&nbsp;\|&nbsp;Object>&nbsp;json | Chaîne ou objet GeoJSON |
-| Options &ltObject&gt | Ensemble de paires de clés ou de valeurs qui personnalise la couche de sortie MapML. Toutes les options sont facultatives et décrites ci-après. |
+| \<String \| Object> json | Chaîne ou objet GeoJSON |
+| Options \<Object\> | Ensemble de paires de clés ou de valeurs qui personnalise la couche de sortie MapML. Toutes les options sont facultatives et décrites ci-après. |
 
 ### Options
 
-&ltObject&gt Ensemble de paires de clés ou de valeurs qui personnalise la couche de sortie MapML. Toutes les options sont facultatives et décrites ci-après.
+\<Object\> Ensemble de paires de clés ou de valeurs qui personnalise la couche de sortie MapML. Toutes les options sont facultatives et décrites ci-après.
 
 | Option | Type | Default | Description |
 |------|------|---------------|--------|
-| `label` | <String\> | `json.name`, `json.title` ou "Layer" | Définit la [label](https://maps4html.org/web-map-doc/docs/layers/layer/#label) de la couche de sortie. |
-| `projection` |  <String\> | `OSMTILE` | Définit la [projection]  (https://maps4html.org/web-map-doc/docs/elements/mapml-viewer/#projection) de la couche de sortie. Les valeurs définies incluent : `OSMTILE`, `CBMTILE`, `WGS84`, and `APSTILE`.|
-| `caption` | <String&nbsp;\|&nbsp;Function\> | Utilise la valeur `label` | Fonction qui accepte la caractéristique JSON et retourne une chaîne, OU une chaîne qui est le nom d’une propriété à mapper sur [featurecaption](https://maps4html.org/web-map-doc/docs/elements/feature/#map-featurecaption). Si aucune propriété associée n’est trouvée, la chaîne fournie sert de valeur de la légende de la caractéristique. Voir la section [Utilisation des options de base](#basic-options-usage) pour un exemple. |
-| <span id="option-properties">`properties`</span> | <Function&nbsp;\|&nbsp;String&nbsp;\|&nbsp;HTMLElement\> | _Les propriétés seront mappées à un [table](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table) HTML._ | Précise la façon dont les propriétés sont mappées. <Function\> - Fonction qui accepte un argument – l’objet GeoJSON feature – et qui doit retourner un HTMLElement qui devient l’unique élément-enfant de <properties\>. <String\> - Chaîne qui sera analysée syntaxiquement et utilisée comme unique élément-enfant de `<properties>` avec toutes les caractéristiques. <HTMLElement\> - Élément qui servira d’unique élément- enfant de `<properties>` avec toutes les caractéristiques. Voir la section [utilisation des options de base](#basic-options-usage) pour un exemple.|
-| `geometryFunction` | <Function\> | La géométrie _MapML reproduit la valeur géométrique GeoJSON_ | <Function\> Fonction pour modifier les [descendants] générés (https://maps4html.org/web-map-doc/docs/elements/geometry/#child-elements) de `<map-geometry>` qui peut ajouter des classes, [hyperlinks](https://maps4html.org/web-map-doc/docs/other-elements/map-a/) et des [spans](https://maps4html.org/web-map-doc/docs/other-elements/span/) à l’instance. Un élément `<map-geometry>` simple est créé par défaut. La fonction accepte deux arguments : l’[élément-enfant] généré (https://maps4html.org/web-map-doc/docs/elements/geometry/#child-elements) de `<map-geometry>` et [l’objet de la caractéristique JSON](https://www.rfc-editor.org/rfc/rfc7946#section-3.2) pour retourner un élément-enfant modifié de `<map-geometry>`. Voir la section [Utilisation des options de base](#basic-options-usage) pour un exemple. |
+| `label` | \<String\> | `json.name`, `json.title` ou "Layer" | Définit la [label](https://maps4html.org/web-map-doc/docs/layers/layer/#label) de la couche de sortie. |
+| `projection` |  \<String\> | `OSMTILE` | Définit la [projection]  (https://maps4html.org/web-map-doc/docs/elements/mapml-viewer/#projection) de la couche de sortie. Les valeurs définies incluent : `OSMTILE`, `CBMTILE`, `WGS84`, and `APSTILE`.|
+| `caption` | \<String \| Function\> | Utilise la valeur `label` | Fonction qui accepte la caractéristique JSON et retourne une chaîne, OU une chaîne qui est le nom d’une propriété à mapper sur [featurecaption](https://maps4html.org/web-map-doc/docs/elements/feature/#map-featurecaption). Si aucune propriété associée n’est trouvée, la chaîne fournie sert de valeur de la légende de la caractéristique. Voir la section [Utilisation des options de base](#utilisation-des-options-de-base) pour un exemple. |
+| <span id="option-properties">`properties`</span> | \<Function \| String \| HTMLElement\> | _Les propriétés seront mappées à un [table](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table) HTML._ | Précise la façon dont les propriétés sont mappées. \<Function\> - Fonction qui accepte un argument – l’objet GeoJSON feature – et qui doit retourner un HTMLElement qui devient l’unique élément-enfant de \<properties\>. \<String\> - Chaîne qui sera analysée syntaxiquement et utilisée comme unique élément-enfant de `<properties>` avec toutes les caractéristiques. \<HTMLElement\> - Élément qui servira d’unique élément- enfant de `<properties>` avec toutes les caractéristiques. Voir la section [utilisation des options de base](#utilisation-des-options-de-base) pour un exemple.|
+| `geometryFunction` | \<Function\> | La géométrie _MapML reproduit la valeur géométrique GeoJSON_ | \<Function\> Fonction pour modifier les [descendants] générés (https://maps4html.org/web-map-doc/docs/elements/geometry/#child-elements) de `<map-geometry>` qui peut ajouter des classes, [hyperlinks](https://maps4html.org/web-map-doc/docs/elements/map-a/) et des [spans](https://maps4html.org/web-map-doc/docs/elements/span/) à l’instance. Un élément `<map-geometry>` simple est créé par défaut. La fonction accepte deux arguments : l’[élément-enfant] généré (https://maps4html.org/web-map-doc/docs/elements/geometry/#child-elements) de `<map-geometry>` et [l’objet de la caractéristique JSON](https://www.rfc-editor.org/rfc/rfc7946#section-3.2) pour retourner un élément-enfant modifié de `<map-geometry>`. Voir la section [Utilisation des options de base](#utilisation-des-options-de-base) pour un exemple. |
 
 ---
 ### Exemples
@@ -280,9 +280,9 @@ let output = geojson2mapml(json);
 
 | Fonction | Retours | Description |
 |----------|---------|-------------|
-| <code>mapml2geojson(<HTMLLayerElement\>&nbsp;element,&nbsp;<Object\>&nbsp;options)</code> | Objet de collection de caractéristiques JavaScript (GeoJSON) | Cette fonction transforme l’élément- enfant `<feature>` d’un élément `<layer->` en un objet GeoJSON FeatureCollection. Vous fournissez les [options](#options-1) pour contrôler la transformation. Cette fonction doit servir dans un événement windows.onload.
+| <code>mapml2geojson(\<HTMLLayerElement\> element, \<Object\> options)</code> | Objet de collection de caractéristiques JavaScript (GeoJSON) | Cette fonction transforme l’élément- enfant `<feature>` d’un élément `<layer->` en un objet GeoJSON FeatureCollection. Vous fournissez les [options](#options-1) pour contrôler la transformation. Cette fonction doit servir dans un événement windows.onload.
 
-:::Mise en garde
+:::caution
 
 `mapml2geojson` doit être appelé dans un événement windows.onload pour fonctionner correctement, comme suit :
 
@@ -298,17 +298,17 @@ window.onload = (event) => {
 
 | Paramètre | Description |
 |------|--------------|
-| Élément <HTMLLayerElement\> | Élément `<layer->` |
-| <Object\>&nbsp;options | Vous fournissez des paramètres au moyen d’un objet d’options avec des  [noms d’option prédéfinis](#options-1). |
+| Élément \<HTMLLayerElement\> | Élément `<layer->` |
+| \<Object\> options | Vous fournissez des paramètres au moyen d’un objet d’options avec des  [noms d’option prédéfinis](#options-1). |
 
 ### Options
 
-<Object\> Ensemble de paires de clés ou de valeurs qui personnalise l’objet de sortie GeoJSON. Toutes les options sont facultatives et décrites ci-après.
+\<Object\> Ensemble de paires de clés ou de valeurs qui personnalise l’objet de sortie GeoJSON. Toutes les options sont facultatives et décrites ci-après.
 
 | Option | Type | Défaut | Description |
 |------|------|---------------|--------|
-| `propertyFunction` | <Function\> | _n/a_ | Fonction que vous fournissez et qui mappe l’élément `<map-properties>` de la caractéristique à un [membre GeoJSON "properties"](https://datatracker.ietf.org/doc/html/rfc7946#section-3.2), puisque qu’il n’y a que vous qui connaît la conception du balisage dans votre valeur `<map-properties>`. Si vous ne fournissez pas cette option, une fonction par défaut essaiera de renverser un élément-enfant `<table>` de `<map-properties>`, comme si ce tableau était généré par la [fonction d’option de propriétés par défaut de geojson2mapml](#option-properties). |
-| `transform` | <Boolean\> | `true` | Transforme des valeurs `<map-coordinates>` en valeurs `gcrs` (longitude, latitude), si elles ne le sont pas déjà. GeoJSON [recommande](https://www.rfc-editor.org/rfc/rfc7946.html#section-4) d’utiliser les coordonnées de longitude et de latitude WGS 84, il s’agit donc là du comportement par défaut. |
+| `propertyFunction` | \<Function\> | _n/a_ | Fonction que vous fournissez et qui mappe l’élément `<map-properties>` de la caractéristique à un [membre GeoJSON "properties"](https://datatracker.ietf.org/doc/html/rfc7946#section-3.2), puisque qu’il n’y a que vous qui connaît la conception du balisage dans votre valeur `<map-properties>`. Si vous ne fournissez pas cette option, une fonction par défaut essaiera de renverser un élément-enfant `<table>` de `<map-properties>`, comme si ce tableau était généré par la [fonction d’option de propriétés par défaut de geojson2mapml](#option-properties). |
+| `transform` | \<Boolean\> | `true` | Transforme des valeurs `<map-coordinates>` en valeurs `gcrs` (longitude, latitude), si elles ne le sont pas déjà. GeoJSON [recommande](https://www.rfc-editor.org/rfc/rfc7946.html#section-4) d’utiliser les coordonnées de longitude et de latitude WGS 84, il s’agit donc là du comportement par défaut. |
 ###### Remarques
 
 Au besoin, `mapml2geojson` transforme des coordonnées en `gcrs` par défaut avant la sérialisation. Prenez note que toutes les projections géographiques CRS (système de référence des coordonnées) ne sont pas équivalentes, et que l’interprétation de telles coordonnées n’est pas garantie conforme aux coordonnées WGS 84 ou GPS, et que, par conséquent, elles ne suivent pas nécessairement la [recommandation GeoJSON](https://datatracker.ietf.org/doc/html/rfc7946#section-4), qui requiert des coordonnées de longitude et de latitude codées conformément au système géodésique WGS 84. Le moteur de projection utilisé pour mettre en œuvre cette conversion est incapable de transformer des coordonnées d’un ellipsoïde à un autre. Par conséquent, le JSON résultant DOIT (d’une manière qui reste à déterminer) être étiqueté avec la donnée qu’utilise la projection de la couche.
